--- a/conf/application.conf
+++ b/conf/application.conf
@@ -5,7 +5,7 @@ play.modules.enabled += "Module"
 
 # Enable Pekko components
 play.application.loader = "play.api.inject.guice.GuiceApplicationLoader"
-play.http.secret.key = "changeme"
+play.http.secret.key = "0dX6DQ;8_l3Ese>c]XL^g8bbhk/kQ6eJ3l<BH<QKhNgZNhHgF`=HM:bCdM?g:hlK"
 play.filters.hosts {
   allowed = ["."]
 }
